GLideNUI-wtl: Add language for texture tab

--- a/translations/wtl/gliden64_de.Lang
+++ b/translations/wtl/gliden64_de.Lang
@@ -132,3 +132,46 @@
 #4033# "Wenn diese Einstellung ausgewählt ist, wird der Frame-Buffer direkt ausgegeben. Dies verhindert einige Grafikprobleme, kann aber zu Verzögerungen und visuellen Problemem führen.\n[Empfehlung: In der Regel nicht ausgewählt]"
 #4034# "Tiefe in Haupttiefenpuffer kopieren"
 #4035# "Diese Option ist für einige von der Reshade-Tiefe abhängige Effekte, wie SSAO und Tiefenschärfe, erforderlich.\n[Empfehlung: nur wenn du Reshade verwendest und tiefenabhängige Effekte benötigst]"
+
+/*********************************************************************************
+* Texture enhancement                                                            *
+*********************************************************************************/
+#5000# "N64 Texturen"
+#5001# "Filter:"
+#5002# "Diese Filter glätten oder schärfen Texturen. Es gibt vier Filter zum Glätten und zwei Filter zum Schärfen. Um so höher die Nummer, umso stärker der Effekt. Die Geschwindigkeit kann je nach Spiel und/oder PC beeinträchtigt werden.\n[Empfehlung: Eigene Vorliebe]"
+#5003# "Kein"
+#5004# "Glatte Filterung 1"
+#5005# "Glatte Filterung 2"
+#5006# "Glatte Filterung 3"
+#5007# "Glatte Filterung 4"
+#5008# "Scharfe Filterung 1"
+#5009# "Scharfe Filterung 2"
+#5010# "Verbesserungen:"
+#5011# "Es können 12 verschiedene Filter ausgewählt werden. Abhängig vom Filter kann die Ausführungsgeschwindigkeit beeinträchtigt werden.\nWenn Abspeichern ausgewählt ist werden Texturen im Cache gespeichert. Dies steigert die Ausführungsgeschwindigkeit. Deaktiviere Ausgeschaltet für Hintergründe für die beste Ausführungsgeschwindikeit.\n[Empfehlung: Eigene Vorliebe]"
+#5012# "Kein"
+#5013# "Abspeichern"
+#5014# "Verringere Color-Banding (empfohlen für xBRZ Verbesserung)"
+#5015# "Diese Einstellung aktiviert eine Vorverarbeitungsstufe, welche Farbtontrennungsprobleme bei hochauflösenden Texturen reduziert.\n[Empfehlung: Ausgewählt für xBRZ]"
+#5016# "Für Hintergünde deaktiviert"
+#5017# "Diese Einstellung verwirft Texturverbesserungen für lange, schmale Texturen, welche gewöhnlich für Hintergründe verwendet werden. Dies spart Texturspeicher und kann die Ausführungsgeschwindigkeit steigern.\n[Empfehlung: Ausgewählt]"
+#5018# "Dateispeicher anstelle des Cache-Speichers verwenden"
+#5019# "Verwende Texturpaket"
+#5020# "Pfad für Texturpakete:"
+#5021# "Pfad für Textur-Packs auswählen.\nStandard: Plugin/hires_texture"
+#5022# "Textur-Cache-Pfad:"
+#5023# "Textur-Dump-Pfad:"
+#5024# "Benutze volle Transparenz (empfohlen für neuere Texturepacks)"
+#5025# "Falls diese Einstellung nicht ausgewählt ist, werden Texturen wie beim Rice-Video-Plugin geladen: Transparenzen sind entweder an oder aus. Wenn diese Einstellung ausgewählt ist untersucht GlideN64 wie der Alpha Channel der Texturen aufgebaut ist und wählt das beste Format aus. Dies gibt dem Ersteller von Textur-Packs die Möglichkeit halbtransparente Texturen zu verwenden.\nDiese Einstellung sollte bei alten oder schlecht entworfenen Texture-Packs nicht ausgewählt werden.\n[Empfehlung: Textur-Pack abhängig]"
+#5026# "Alternative CRC-Berechnung (für ältere Rice-Video-Packs)"
+#5027# "Diese Einstellung emuliert einen CRC Berechnungsfehler des Rice-Video-Plugins. Wenn Fehler beim Laden von Texturen auftauchen aktiviere oder deaktiviere diese Einstellung.\n[Empfehlung: Nicht ausgewählt, ausgewählt für ältere Textur-Packs]"
+#5028# "Dateispeicher anstelle des Cache-Speichers verwenden"
+#5029# "Speichere/editiere Texturen"
+#5030# "Diese Einstellung speichert aktuell angezeigte Texturen in einem Texture-Pack Verzeichnis. Es können auch Texturen neu geladen werden während ein Spiel läuft um direkt zu sehen wie sie aussehen.\nHotkeys:\nBenutze R um Texturen aus Texture-Packs neu zu laden\nBenutze D um Texturen speichern an- und abzuschalten"
+#5031# "Größe des Speichercaches für erweiterte Texturen:"
+#5032# "Verbesserte und gefilterte Texturen können zwischengespeichert werden, um die Leistung zu erhöhen. Diese Einstellung legt fest wieviel Speicher für den Texture-Cache reserviert wird. Dies kann bei vielen Anfragen die Leistung erhöhen, was normalerweise der Fall ist. Eigentlich sollten 128MB mehr als genug sein. Der beste Wert ist aber spielabhängig. Super Mario 64 reichen z.B. 32 MB. Conker's Bad Fur Day kann aber noch von 256 MB+ providieren. Beim Wert 0 ist der Cache deaktiviert.\n[Empfehlung: abhängig von PC und Spiel]"
+#5033# "Speichere den Cache für verbesserte Texturen auf der Festplatte"
+#5034# "Diese Einstellung speichert alle vorher geladenen oder verbesserten Texturen auf dem PC. Wenn das Spiel noch einmal gestartet wird müssen die Texturen nicht neu erstellt werden.\nWenn Texture-Packs verwendet werden dauert das Laden eines Packs nur wenige Sekunden gegenüber dem normalen Ladevorgang von 5-60 Sekunden. Wird jedoch das Texture Pack verändert, muss der Texture Cache manuell gelöscht werden um die Änderung zu übernehmen. Cache Dateien werden im Plugin Verzeichnis im Verzeichnis Cache gespeichert.\n[Empfehlung: Ausgewählt]"
+#5035# "Textur-Cache komprimieren"
+#5036# "Texturen werden komprimiert, damit mehr Texturen im Cache gehalten werden können. Die Kompressionsrate variiert je nach Textur, aber ist normalerweise 1/5 der Originalgröße.\n[Empfehlung: Ausgewählt]"
+#5037# "Konvertiere Texturen zu 16Bit"
+#5038# "Diese Einstellung halbiert den Speicherbedarf von Texturen im Texture-Cache und VRAM um die Leistung zu steigern. Wenn die Farbtiefe reduziert wird versucht GLideN64 die originale Qualität so gut wie möglich zu erhalten. Bei den meisten Texturen ist es kaum wahrnehmbar, aber einige Texturen, wie z.B. für den Himmel, können schlechter aussehen.\n[Empfehlung: Nicht ausgewählt]"
