--- a/translations/wtl/gliden64_en.Lang
+++ b/translations/wtl/gliden64_en.Lang
@@ -150,3 +150,46 @@
 #4033# "When this option is checked, the frame buffer is rendered directly to the screen. This prevents some graphic problems but may cause slowdowns or visual quality problems.\n[Recommended: Usually unchecked]"
 #4034# "Copy depth to main depth buffer"
 #4035# "This option is required for some Reshade depth dependant effects, such as SSAO and depth of field.\n[Recommended: only if you use Reshade and need depth dependant effects]"
+
+/*********************************************************************************
+* Texture enhancement                                                            *
+*********************************************************************************/
+#5000# "N64 textures"
+#5001# "Filter:"
+#5002# "This filter smooths or sharpens textures. There are four smoothing filters and two sharpening filters. The higher the number, the stronger the effect. Performance may be affected depending on the game and/or your PC.\n[Recommended: Your preference]"
+#5003# "None"
+#5004# "Smooth filtering 1"
+#5005# "Smooth filtering 2"
+#5006# "Smooth filtering 3"
+#5007# "Smooth filtering 4"
+#5008# "Sharp filtering 1"
+#5009# "Sharp filtering 2"
+#5010# "Enhancement:"
+#5011# "There are 12 distinct filters to select. Depending on which filter, they may cause performance problems.\nWhen Store is selected, textures are saved to the cache as-is. This improves performance in games that load many textures. Uncheck Disable for backgrounds for the best performance.\n[Recommended: Your preference]"
+#5012# "None"
+#5013# "Store"
+#5014# "Decrease color banding (recommended for xBRZ enhancement)"
+#5015# "This option enables a pre-processing step that reduces posterization issues on enhanced textures.\n[Recommended: Checked for xBRZ]"
+#5016# "Disable for backgrounds"
+#5017# "This option skips texture enhancements for long, narrow textures that are usually used for backgrounds. This may save texture memory and improve performance.\n[Recommended: Checked, unless Enhancement is set to Store]"
+#5018# "Use file storage instead of memory cache"
+#5019# "Use texture pack"
+#5020# "Texture pack path:"
+#5021# "Select path to the folder with texture packs.\nDefault: Plugin/hires_texture"
+#5022# "Texture cache path:"
+#5023# "Texture dump path:"
+#5024# "Use full transparencies (recommended for newer texture packs)"
+#5025# "When this option is cleared, textures will be loaded as they are when using Rice Video: transparencies either on or off. When this option is selected, GlideN64 will check how the texture's alpha channel was designed and will select the most appropriate format. This gives texture pack designers freedom to use semi-transparent textures.\nClear this option for older or poorly designed texture packs.\n[Recommended: Texture pack dependent]"
+#5026# "Alternative CRC calculation (for old Rice Video packs)"
+#5027# "This option emulates a palette CRC calculation bug in Rice Video. If you have problems loading textures, try checking or unchecking this option.\n[Recommended: Mostly unchecked, checked for old texture packs]"
+#5028# "Use file storage instead of memory cache"
+#5029# "Dump/edit textures"
+#5030# "This option dumps textures on screen to a texture pack folder. You can also reload textures while the game is running to see how they look instantly—big time saver!\nHotkeys:\nUse R to reload textures from the texture pack\nUse D to toggle texture dumping on or off"
+#5031# "Size of memory cache for enhanced textures:"
+#5032# "Enhanced and filtered textures can be cached to improve performance. This option adjusts how much memory is dedicated to the texture cache. This can improve performance if there are many requests for the same texture, which is usually the case. Normally 128 MB should be more than enough, but the best option is different for each game. Super Mario 64 may not need more than 32 MB, but Conker's Bad Fur Day can take advantage of 256 MB+. Adjust accordingly if you are having performance problems. Setting this option to 0 disables the cache.\n[Recommended: PC and game dependent]"
+#5033# "Save enhanced texture cache to hard disk"
+#5034# "This option saves all previously loaded and enhanced textures to your PC. When the game is next launched, textures don't have to be recreated, causing smoother performance.\nWhen using texture packs, loading packs will take only a few seconds when the game is launched as opposed to the 5–60 seconds that loading usually takes. However, if you change the texture pack you'll have to manually delete the texture cache. Saved cache files are saved to a folder called Cache within the plugins folder.\n[Recommended: Checked]"
+#5035# "Compress texture cache"
+#5036# "Textures will be compressed so more textures can be held in the cache. The compression ratio varies per texture, but the compression is typically 1/5 of the original size.\n[Recommended: Checked]"
+#5037# "Convert textures to 16 bpp"
+#5038# "This option halves the space used by textures in the texture cache and video card memory to improve performance. When reducing the color, GLideN64 tries to perserve the original quality as much as possible. On most textures it's hardly noticeable, but some textures, like skies, can look noticeably worse.\n[Recommended: Unchecked]"
