--- a/translations/wtl/gliden64_es.Lang
+++ b/translations/wtl/gliden64_es.Lang
@@ -94,3 +94,41 @@
 #4027# "Desactivado"
 #4032# "Renderizar el frame buffer de N64 a la imagen"
 #4033# "Al activar esta opción se renderizará el frame buffer directamente en pantalla. Esto evita algunos problemas gráficos pero puede provocar ralentizaciones o problemas de calidad visual.\n[Recomendación: Por norma general desactivado]"
+
+/*********************************************************************************
+* Texture enhancement                                                            *
+*********************************************************************************/
+#5000# "Texturas de N64"
+#5001# "Filtro:"
+#5002# "Este filtro suaviza o perfila las texturas. Hay cuatro filtros de suavizado y dos de perfilado. Cuanto más alto sea el número, más fuerte será el efecto. Podría afectar al rendimiento según el juego o tu equipo.\n[Recomendación: Lo que prefieras]"
+#5003# "Desactivar"
+#5004# "Filtro suave 1"
+#5005# "Filtro suave 2"
+#5006# "Filtro suave 3"
+#5007# "Filtro suave 4"
+#5008# "Filtro nítido 1"
+#5009# "Filtro nítido 2"
+#5010# "Mejora:"
+#5011# "Tienes 12 filtros distintos a elegir. Algunos filtros podrían provocar problemas de rendimiento.\nCuando se selecciona la opción «Almacenar», las texturas se guardarán en la caché tal cual estén. Esto mejorará el rendimiento en los juegos que utilizan muchas texturas. Desactiva la opción «Desactivar en fondos» para obtener el mejor rendimiento posible.\n[Recomendación: Lo que prefieras]"
+#5012# "Desactivar"
+#5013# "Almacenar"
+#5014# "Reducir las bandas de color (Recomendado para el filtro xBRZ)"
+#5015# "Esta opción activa un paso de preprocesado que reduce los efectos de posterización en las texturas modificadas.\n[Recomendación: Activado para el efecto xBRZ]"
+#5016# "Desactivar en fondos"
+#5017# "Esta opción evita aplicar las mejoras de texturas en aquellas que sean largas y estrechas, ya que suelen utilizarse para los fondos. Podría reducir el consumo de texturas y mejorar el rendimiento.\n[Recomendación: Activado salvo que las mejoras de texturas estén configuradas en «Almacenar»]"
+#5019# "Usar paquete de texturas"
+#5020# "Ruta de paquetes de texturas:"
+#5021# "Selecciona la carpeta donde se encuentren los paquetes de texturas.\nCarpeta predeterminada: Plugin/hires_texture"
+#5024# "Utilizar transparencias totales (Recomendado para paquetes nuevos)"
+#5025# "Si se desactiva esta opción, las texturas se cargarán igual que con Rice Video: Las transparencias son absolutas o nulas. Al activar esta opción GlideN64 comprobará la forma en la que se ha diseñado el canal alfa de la textura y seleccionará el formato más adecuado. Esto da a los diseñadores de paquetes libertad para utilizar texturas semitransparentes.\nDesactiva esta opción si utilizas paquetes antiguos o pobremente diseñados.\n[Recomendación: Según cada paquete de texturas]"
+#5026# "Cálculo alternativo de CRC (Para paquetes antiguos para Rice Video)"
+#5027# "Esta opción emula un fallo en el cálculo del CRC de las paletas de RiceVideo. Si no se cargan algunas texturas, prueba a activar o desactivar esta opción.\n[Recomendación: Por norma general desactivado, activar para paquetes muy antiguos]"
+#5029# "Volcar/Editar texturas"
+#5030# "Esta opción vuelca las texturas que aparezcan en pantalla a una carpeta con un paquete de texturas. También puedes recargar las texturas mientras se ejecuta el juego para ver cómo quedan al momento, ¡ahorrándote mucho tiempo!\nAtajos de teclado:\nPulsa R para recargar las texturas del paquete de texturas.\nPulsaD para activar o desactivar el volcado de texturas."
+#5032# "Las texturas mejoradas y filtradas pueden guardarse en una caché para mejorar el rendimiento. Esta opción ajusta la cantidad de memoria que se dedicará a la caché de texturas. Puede mejorar el rendimiento si hay peticiones repetidas de la misma textura, que suele ocurrir. Normalmente deberían bastar 128 MB, pero cada juego tiene su valor ideal. Puede que Super Mario 64 no necesite más de 32 MB, pero Conker's Bad Fur Day puede aprovechar más de 256 MB. Cambia este parámetro si tienes problemas de velocidad. Si la opción está a 0 desactivará la caché.\n[Recomendación: En función del juego y de tu equipo]"
+#5033# "Guardar una caché de texturas mejoradas al disco duro"
+#5034# "Esta opción guarda todas las texturas cargadas y mejoradas a tu PC. Cuando vuelvas a ejecutar el juego, no hará falta recrear las texturas y mejorará el rendimiento.\nCuando utilices paquetes de texturas, su carga sólo tardará unos segundos en vez de la media de 5 a 60 segundos que suele tardar. Sin embargo, si cambias el paquete de texturas, tendrás que borrar la caché de texturas de forma manual. Los archivos de caché se guardan en una carpeta llamada «Cache», dentro de la carpeta plugins.\n[Recomendación: Activado]"
+#5035# "Comprimir caché de texturas"
+#5036# "Se comprimirán las texturas para que entren más texturas en la caché. La proporción de compresión cambia según la textura, pero suele ser de 1/5 del tamaño original.\n[Recomendación: Activado]"
+#5037# "Convertir texturas a 16 BPP"
+#5038# "Esta opción reduce a la mitad el tamaño que utilizan las texturas de la caché de texturas y de la memoria de la tarjeta gráfica para mejorar el rendimiento. A la hora de reducir el color, GlideN64 intentará preservar la calidad original en la medida de lo posible. Es apenas imperceptible en la mayoría de las texturas, pero algunas como los cielos quedarán peor.\n[Recomendación: Desactivado]"
