--- a/translations/wtl/gliden64_fr.Lang
+++ b/translations/wtl/gliden64_fr.Lang
@@ -94,3 +94,41 @@
 #4027# "Désactivé"
 #4032# "Restituer le tampon image N64 vers la sortie"
 #4033# "Quand cette option est activée, le tampon image est restitué directement vers l'écran. Cela permet de corriger certains problèmes graphiques mais peut causer des ralentissements et réduire la qualité visuelle.\n[Recommandé : Généralement désactivé]"
+
+/*********************************************************************************
+* Texture enhancement                                                            *
+*********************************************************************************/
+#5000# "Textures N64"
+#5001# "Filtre :"
+#5002# "Ce filtre lisse ou affine les textures. Il y a 4 filtres de lissage et 2 filtres d'affinement. Plus le nombre est élevé, plus l'effet est important. Veuillez noter que les performances peuvent être impactées suivant le jeu et/ou le PC.\n[Recommandé : selon votre préférence]"
+#5003# "Aucun"
+#5004# "Filtrage lisse 1"
+#5005# "Filtrage lisse 2"
+#5006# "Filtrage lisse 3"
+#5007# "Filtrage lisse 4"
+#5008# "Filtrage affiné 1"
+#5009# "Filtrage affiné 2"
+#5010# "Améliorations :"
+#5011# "12 filtres différents sont sélectionnables. Selon le filtre, il peut y avoir un impact sur les performances.\nQuand le mode Stocker est sélectionné, les textures sont sauvegardées dans le cache 'tel quel'. Cela augmente les performances dans les jeux chargeant de nombreuses textures. Décoché Désactiver pour les arrière-plans pour un meilleur résultat.\n[Recommandé : selon votre préférence]"
+#5012# "Aucun"
+#5013# "Stocker"
+#5014# "Réduire les bandes de couleur (recommandé pour l'amélioration xBRZ)"
+#5015# "Cette option active une étape de pré-processing qui réduit les problèmes de postérisation sur les textures améliorées.\n[Recommandé : Activé pour le filtre xBRZ]"
+#5016# "Désactiver pour les arrière-plans"
+#5017# "Cette option ignore l'amélioration pour les textures lointaines et étroites généralement utilisées pour les arrière-plans. Cela peut réduire la mémoire utilisée pour la sauvegarde des textures et augmenter les performances.\n[Recommandé : Activé, sauf si l'option Améliorations est définie sur 'Store']"
+#5019# "Utiliser un Pack de Textures"
+#5020# "Chemin des Packs de Textures :"
+#5021# "Sélectionne le répertoire contenant les packs de textures.\nPar défaut : Plugin/hires_texture"
+#5024# "Utiliser les transparences complètes (recommandé pour les packs de textures récents)"
+#5025# "Quand cette option est désactivée, les textures seront chargées tel qu'elles le seraient avec Rice Video : la transparence est soit active, soit inactive. Quand cette option est sélectionnée, GlideN64 vérifie comment le canal alpha de la texture a été conçu et utilise le format le plus approprié. Cela donne aux développeurs de pack de textures la liberté d'utiliser des textures semi-transparentes.\nDésactivez cette option pour les vieux pack de textures ou ceux mal conçus.\n[Recommandé : en fonction du pack de textures]"
+#5026# "Calcul alternatif du CRC (pour les vieux packs Rice Video)"
+#5027# "Cette option émule un bug dans le plugin RiceVideo sur le calcul CRC de la palette. Si certaines textures ne sont pas chargées, positionnez cette option à 'activé' ou 'désactivé'.\n[Recommandé : principalement désactivé, activé pour les vieux packs de textures]"
+#5029# "Dumper/éditer les textures"
+#5030# "Cette option permet de dumper les textures affichées à l'écran vers le répertoire des packs de textures. Vous pouvez également recharger les textures quand le jeu est démarré pour voir le résultat instantanément - quel gain de temps !\nTouches de raccourcis : \nUtilisez R pour recharger les textures du pack de textures.\nUtilisez D pour le basculer le mode de dumpimg sur activé/désactivé."
+#5032# "Les textures améliorées et filtrées peuvent être mises en cache. Ce paramètre ajustera la quantité de mémoire allouée pour le cache des textures. Cela améliore les performances si un nombre conséquent de requêtes appelle les mêmes textures, ce qui est généralement le cas. Par défaut, 128 Mo devraient être suffisant mais cela peut varier selon les jeux. Super Mario 64 peut nécessiter moins de 32 Mo, mais Conker's Bad Fur Day peut nécessiter plus de 256 Mo. Ajustez la valeur si vous rencontrez des problèmes de performances. La valeur '0' désactive le cache.\n[Recommandé : en fonction du jeu et du PC]"
+#5033# "Sauvegarder le cache d'amélioration des textures sur le disque"
+#5034# "Cette option sauvegardera toutes les textures précédemment chargées et celles améliorées sur le disque. Au prochain démarrage du jeu, les textures n'auront pas à être recréées, ce qui améliore les performances.\nQuand vous utilisez des packs de textures, leur chargement ne prendra que quelques secondes au lancement du jeu, au lieu de 5 à 60 secondes habituellement. Par contre, si le pack de texture est modifié vous devrez supprimer manuellement le cache. Les fichiers de cache sont sauvegardés dans le sous-dossier 'Cache' du dossier contenant le plugin.\n[Recommandé : Activé]"
+#5035# "Compresser le Cache de Texture"
+#5036# "Les textures seront compressées, ainsi plus de textures pourront être mises en cache. Le ratio de compression varie suivant les textures, mais il est en moyenne de 1/5 par rapport à la taille originale.\n[Recommandé : Activé]"
+#5037# "Convertir les textures en 16 bits"
+#5038# "Cette option réduit de moitié l'espace occupé par les textures dans le cache ainsi que celui de la mémoire de votre carte graphique, cela afin d'améliorer les performances. Quand la taille du codage de la couleur est réduite, GLideN64 essaye de préserver la qualité originale autant que possible. Sur certaines textures c'est difficilement visible, mais sur d'autres, tel le ciel, le rendu peut être mauvais.\n[Recommandé : Désactivé]"
