--- a/translations/wtl/gliden64_ja.Lang
+++ b/translations/wtl/gliden64_ja.Lang
@@ -26,3 +26,12 @@
 * Frame Buffer Tab                                                               *
 *********************************************************************************/
 #4000# "フレームバッファのエミュレート"
+
+/*********************************************************************************
+* Texture enhancement                                                            *
+*********************************************************************************/
+#5001# "フィルタ :"
+#5010# "拡張:"
+#5019# "テクスチャパックを使用する"
+#5020# "テクスチャパックのパス:"
+#5035# "テクスチャキャッシュを圧縮"
