--- a/translations/wtl/gliden64_pl.Lang
+++ b/translations/wtl/gliden64_pl.Lang
@@ -26,3 +26,12 @@
 * Frame Buffer Tab                                                               *
 *********************************************************************************/
 #4000# "Emuluj bufor ramki"
+
+/*********************************************************************************
+* Texture enhancement                                                            *
+*********************************************************************************/
+#5001# "Filtr:"
+#5010# "Uwydatnienie:"
+#5019# "Użyj paczki tekstur"
+#5020# "Ścieżka paczek tekstur:"
+#5035# "Kompresuj pamięć podręczną tekstur"
