--- a/translations/wtl/gliden64_pt_BR.Lang
+++ b/translations/wtl/gliden64_pt_BR.Lang
@@ -26,3 +26,12 @@
 * Frame Buffer Tab                                                               *
 *********************************************************************************/
 #4000# "Emula frame buffer"
+
+/*********************************************************************************
+* Texture enhancement                                                            *
+*********************************************************************************/
+#5001# "Filtro:"
+#5010# "Melhoramento:"
+#5019# "Usa pacote de textura"
+#5020# "Local dos pacotes de textura:"
+#5035# "Compacta cache de textura"
