--- a/translations/wtl/gliden64_en.Lang
+++ b/translations/wtl/gliden64_en.Lang
@@ -208,3 +208,10 @@
 #6008# "px"
 #6009# "Color:"
 #6010# "Preview"
+
+/*********************************************************************************
+* Debug                                                                          *
+*********************************************************************************/
+#7000# "Dump low-level info"
+#7001# "Dump display list commands"
+#7002# "Dump detailed info (matrices, vertices, etc.)"
