--- a/translations/wtl/gliden64_it.Lang
+++ b/translations/wtl/gliden64_it.Lang
@@ -32,3 +32,11 @@
 #5019# "Utilizza un pacchetto texture modificate"
 #5020# "Percorso cartella pacchetti texture:"
 #5035# "Comprimi cache texture"
+
+/*********************************************************************************
+* About                                                                          *
+*********************************************************************************/
+#9000# "Riguardo a GlideN64"
+#9003# "Finanziatori"
+#9004# "Crediti"
+#9006# "Autori"
