--- a/translations/wtl/gliden64_ja.Lang
+++ b/translations/wtl/gliden64_ja.Lang
@@ -35,3 +35,11 @@
 #5019# "テクスチャパックを使用する"
 #5020# "テクスチャパックのパス:"
 #5035# "テクスチャキャッシュを圧縮"
+
+/*********************************************************************************
+* About                                                                          *
+*********************************************************************************/
+#9000# "GLideN64について"
+#9003# "寄付"
+#9004# "クレジット"
+#9006# "作者"
