--- a/translations/wtl/gliden64_pl.Lang
+++ b/translations/wtl/gliden64_pl.Lang
@@ -35,3 +35,11 @@
 #5019# "Użyj paczki tekstur"
 #5020# "Ścieżka paczek tekstur:"
 #5035# "Kompresuj pamięć podręczną tekstur"
+
+/*********************************************************************************
+* About                                                                          *
+*********************************************************************************/
+#9000# "O GLideN64"
+#9003# "Darczyńcy"
+#9004# "Inni twórcy"
+#9006# "Autorzy"
