--- a/translations/wtl/gliden64_pt_BR.Lang
+++ b/translations/wtl/gliden64_pt_BR.Lang
@@ -35,3 +35,11 @@
 #5019# "Usa pacote de textura"
 #5020# "Local dos pacotes de textura:"
 #5035# "Compacta cache de textura"
+
+/*********************************************************************************
+* About                                                                          *
+*********************************************************************************/
+#9000# "Sobre GLideN64"
+#9003# "Financiadores"
+#9004# "Créditos"
+#9006# "Autores"
