GLideNUI-wtl: Fix mistakes in translation files

--- a/translations/wtl/gliden64_en.Lang
+++ b/translations/wtl/gliden64_en.Lang
@@ -66,8 +66,8 @@
 #2041# "Enable 5-bit quantization"
 #2042# "Like real hardware this setting reduces the number of colors if dithering is used. Removes undesired dithering fragments. Default = enabled."
 #2043# "High resolution noise"
-#2044# "RDRAM dithering prevents color banding in games with framebuffer effects."
-#2045# "Settings: Disabled, Bayer ordered grid dithering, Magic Square ordered grid dithering or blue noise dithering.Blue noise dithering produces unobtrusive results.Default = blue noise dithering."
+#2044# "This setting doubles noise resolution to get a finer noise effect at higher resolutions. Default = disabled."
+#2045# "RDRAM dithering prevents color banding in games with framebuffer effects.\nSettings: Disabled, Bayer ordered grid dithering, Magic Square ordered grid dithering or blue noise dithering. Blue noise dithering produces unobtrusive results. Default = blue noise dithering."
 #2046# "Disable"
 #2047# "Bayer"
 #2048# "Magic square"
@@ -107,7 +107,7 @@
 #3027# "Always"
 #3028# "Never"
 #3029# "Background rendering mode (HLE only):"
-#3030# "Background is a complex macro command used to render large (normally full screen) images. Since background images usually don't fit texture memory, the microcode splits them on narrow strips and renders them one by one. HLE code has two modes to emulate background commands:\nOne piece: The whole background image rendred as one textured rectangle. This method is normally much faster, but the result is not always correct.\nStripped: This method emulates background commands as close as possible to actual microcode implementation. It's slower but more precise. Another problem: some games may have gaps between rendered strips in high resolution. Use &quot;Render 2D elements in N64 resolution&quot; option to remove the gaps.\n[Recommended: Game dependent, mostly Stripped]"
+#3030# "Background is a complex macro command used to render large (normally full screen) images. Since background images usually don't fit texture memory, the microcode splits them on narrow strips and renders them one by one. HLE code has two modes to emulate background commands:\nOne piece: The whole background image rendred as one textured rectangle. This method is normally much faster, but the result is not always correct.\nStripped: This method emulates background commands as close as possible to actual microcode implementation. It's slower but more precise. Another problem: some games may have gaps between rendered strips in high resolution. Use \"Render 2D elements in N64 resolution\" option to remove the gaps.\n[Recommended: Game dependent, mostly Stripped]"
 #3031# "One piece"
 #3032# "Stripped"
 
